--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,9 +1,11 @@
-<div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm fixed-top">
+<!-- <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm fixed-top">
   <nav class="my-2 my-md-0 mr-md-3">
     <a class="p-2 text-dark" routerLink="/profile" *ngIf="isLogged">User Profile</a>
     <a class="p-2 text-dark" *ngIf="!isLogged" routerLink="/login">Log in</a>
     <a class="p-2 text-dark" routerLink="/register">Register</a>
   </nav>
   <button class="btn btn-outline-primary" (click)="logOut()" *ngIf="isLogged">Log out</button>
-</div>
+</div> -->
+<app-header></app-header>
 <router-outlet></router-outlet>
+<app-footer></app-footer>
