--- a/frontend/src/app/auth/components/login/login.component.html
+++ b/frontend/src/app/auth/components/login/login.component.html
@@ -1,26 +1,44 @@
-<div class="auth-wrapper">
-  <form class="form-signin" [formGroup]="loginForm" (ngSubmit)="onSubmit()">
-    <h3 class="h3 mb-3 font-weight-normal text-center">Sign in</h3>
-    <!-- Errors -->
-    <div *ngIf="errors?.email" class="alert alert-danger mt-3">
-      {{ errors?.email }}
+<div style="margin-left: auto; margin-right: auto">
+  <p id="loginFeedback"></p>
+</div>
+<div>
+  <h1>Login</h1>
+  <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+    <div>
+      <label for="email">Email: </label>
+      <input type="email" [formControl]="email" />
     </div>
-    <div *ngIf="errors?.password" class="alert alert-danger mt-3">
-      {{ errors?.password }}
+
+    <div>
+      <label for="password">Password: </label>
+      <input type="password" [formControl]="password" />
     </div>
-    <div *ngIf="errors?.error" class="alert alert-danger mt-3">
-      {{ errors?.error }}
-    </div>
-    <!-- Login -->
-    <div class="form-group">
-      <label>Email address</label>
-      <input type="email" class="form-control" formControlName="email" />
-    </div>
-    <div class="form-group">
-      <label>Password</label>
-      <input type="password" class="form-control" formControlName="password" />
-    </div>
-    <button type="button" (click)="router.navigate(['/forgot-password'])">Request new password</button>
-    <button type="submit" class="btn btn-block btn-primary">Log in</button>
+
+    <button type="submit" [disabled]="!loginForm.valid">Login</button>
   </form>
+</div>
+
+<div *ngIf="email.errors">
+  <span
+    style="color: red"
+    *ngIf="email.errors && (email.touched || email.dirty)"
+  >
+    <span *ngIf="email.errors.required">Email is required</span>
+    <div *ngIf="email.errors.pattern">Email not a valid format.</div>
+  </span>
+</div>
+
+<div *ngIf="password.errors">
+  <span
+    style="color: red"
+    *ngIf="password.errors && (password.touched || password.dirty)"
+  >
+    <span *ngIf="password.errors.required">Password is required</span>
+    <span *ngIf="password.errors.minlength"
+      >Password must be greater tha 8 characters</span
+    >
+    <span *ngIf="password.errors.maxlength"
+      >Password can be max 16 characters long</span
+    >
+  </span>
 </div>
