Aplicar estilo a las página de autenticación

--- a/frontend/src/app/auth/components/forgot-password/forgot-password.component.html
+++ b/frontend/src/app/auth/components/forgot-password/forgot-password.component.html
@@ -1,16 +1,45 @@
-<div class="auth-wrapper">
-    <form class="form-forgotPassword" [formGroup]="forgotPasswordForm" (ngSubmit)="onSubmit()">
-      <h3 class="h3 mb-3 font-weight-normal text-center">Forgot password</h3>
-      <!-- Errors -->
-      <div *ngIf="errors?.email" class="alert alert-danger mt-3">
-        {{ errors?.email }}
+<div class="m-auto text-center maxw-500">
+  <div class="m-4 p-3 rounded-3 full-shadow">
+    <h2 class="display-5 text-uppercase mt-4 mb-4">Forgot password</h2>
+    <form [formGroup]="forgotPasswordForm" (ngSubmit)="onSubmit()">
+      <div class="mt-2 mb-2">
+        <input
+          type="email"
+          [formControl]="email"
+          class="form-control form-control-lg bg-dark-50"
+          aria-label="Email"
+          placeholder="Email"
+        />
       </div>
-      <div class="form-group">
-        <label>Email address</label>
-        <input type="email" class="form-control" formControlName="email" />
+
+      <div *ngIf="email.errors" class="mt-2 mb-2 text-start">
+        <span
+          class="text-danger"
+          *ngIf="email.errors && (email.touched || email.dirty)"
+        >
+          <span *ngIf="email.errors.required" class="fs-xs"
+            >Email is required</span
+          >
+          <div *ngIf="email.errors.pattern" class="fs-xs">
+            Email not a valid format.
+          </div>
+        </span>
       </div>
-      <button type="submit" class="btn btn-block btn-primary">Send email</button>
-      <button type="button" (click)="router.navigate(['/login'])">Login</button>
+
+      <button
+        type="submit"
+        [disabled]="!forgotPasswordForm.valid"
+        class="btn btn-primary text-light mt-2 mb-2"
+      >
+        Enviar email
+      </button>
     </form>
   </div>
-  
+</div>
+
+<div class="text-center">
+  <p>
+    ¿Te acordaste de tu contraseña?
+    <a [routerLink]="['/login']">Inicia sesión</a>
+  </p>
+</div>
