--- a/frontend/src/app/auth/components/login/login.component.scss
+++ b/frontend/src/app/auth/components/login/login.component.scss
@@ -1,75 +1,76 @@
-.error {
-    color: red;
+
+
+#loginFeedback {
+  visibility: hidden;
+  min-width: 250px;
+  color: #fff;
+  text-align: center;
+  border-radius: 10px;
+  padding: 16px;
+  z-index: 1;
+  font-size: 14px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+#loginFeedback.requestOk {
+  background-color: green;
+}
+
+#loginFeedback.requestKo {
+  background-color: red;
+}
+
+#loginFeedback.show {
+  visibility: visible;
+  -webkit-animation: fadein 0.5s, fadeout 0.5s 2.5s;
+  animation: fadein 0.5s, fadeout 0.5s 2.5s;
+}
+
+@-webkit-keyframes fadein {
+  from {
+    bottom: 0;
+    opacity: 0;
   }
-  
-  #loginFeedback {
-    visibility: hidden;
-    min-width: 250px;
-    color: #fff;
-    text-align: center;
-    border-radius: 10px;
-    padding: 16px;
-    z-index: 1;
-    font-size: 14px;
-    margin-left: auto;
-    margin-right: auto;
+  to {
+    bottom: 30px;
+    opacity: 1;
   }
-  
-  #loginFeedback.requestOk {
-    background-color: green;
+}
+
+@keyframes fadein {
+  from {
+    bottom: 0;
+    opacity: 0;
   }
-  
-  #loginFeedback.requestKo {
-    background-color: red;
+  to {
+    bottom: 30px;
+    opacity: 1;
   }
-  
-  #loginFeedback.show {
-    visibility: visible;
-    -webkit-animation: fadein 0.5s, fadeout 0.5s 2.5s;
-    animation: fadein 0.5s, fadeout 0.5s 2.5s;
+}
+
+@-webkit-keyframes fadeout {
+  from {
+    bottom: 30px;
+    opacity: 1;
   }
-  
-  @-webkit-keyframes fadein {
-    from {
-      bottom: 0;
-      opacity: 0;
-    }
-    to {
-      bottom: 30px;
-      opacity: 1;
-    }
+  to {
+    bottom: 0;
+    opacity: 0;
   }
-  
-  @keyframes fadein {
-    from {
-      bottom: 0;
-      opacity: 0;
-    }
-    to {
-      bottom: 30px;
-      opacity: 1;
-    }
+}
+
+@keyframes fadeout {
+  from {
+    bottom: 30px;
+    opacity: 1;
   }
-  
-  @-webkit-keyframes fadeout {
-    from {
-      bottom: 30px;
-      opacity: 1;
-    }
-    to {
-      bottom: 0;
-      opacity: 0;
-    }
+  to {
+    bottom: 0;
+    opacity: 0;
   }
-  
-  @keyframes fadeout {
-    from {
-      bottom: 30px;
-      opacity: 1;
-    }
-    to {
-      bottom: 0;
-      opacity: 0;
-    }
-  }
-  
+}
+
+input {
+  border-color: #fff;
+}
