--- a/frontend/src/app/auth/components/reset-password/reset-password.component.html
+++ b/frontend/src/app/auth/components/reset-password/reset-password.component.html
@@ -1,26 +1,73 @@
-<div class="auth-wrapper">
-    <form class="form-signin" [formGroup]="resetPasswordForm" (ngSubmit)="onSubmit()">
-      <h3 class="h3 mb-3 font-weight-normal text-center">Reset password</h3>
-      <div *ngIf="errors?.password" class="alert alert-danger mt-3">
-        {{ errors?.password }}
-      </div>
-      <div *ngIf="errors?.password_confirmation" class="alert alert-danger mt-3">
-        {{ errors?.password_confirmation }}
-      </div>
-      <div class="form-group">
-        <label>Password</label>
-        <input type="password" class="form-control" formControlName="password" />
-      </div>
-      <div class="form-group">
-        <label>Confirm Password</label>
+<div class="m-auto text-center maxw-500">
+  <div class="m-4 p-3 rounded-3 full-shadow">
+    <h2 class="display-5 text-uppercase mt-4 mb-4">Login</h2>
+    <form [formGroup]="resetPasswordForm" (ngSubmit)="onSubmit()">
+      <div class="mt-2 mb-2">
         <input
           type="password"
-          class="form-control"
-          formControlName="password_confirmation"
+          [formControl]="password"
+          class="form-control form-control-lg bg-dark-50"
+          aria-label="Password"
+          placeholder="Password"
         />
       </div>
-      <button type="submit" class="btn btn-block btn-primary">
-        Reset password
+
+      <div *ngIf="password.errors" class="mt-2 mb-2 w-full text-start">
+        <span
+          class="text-danger text-left"
+          *ngIf="password.errors && (password.touched || password.dirty)"
+        >
+          <span *ngIf="password.errors.required" class="fs-xs"
+            >Password is required</span
+          >
+          <span *ngIf="password.errors.minlength" class="fs-xs"
+            >Password must be greater tha 8 characters</span
+          >
+          <span *ngIf="password.errors.maxlength" class="fs-xs"
+            >Password can be max 16 characters long</span
+          >
+        </span>
+      </div>
+      <div class="mt-2 mb-2">
+        <input
+          type="password"
+          [formControl]="password_confirmation"
+          class="form-control form-control-lg bg-dark-50"
+          aria-label="Password"
+          placeholder="Password confirmation"
+        />
+      </div>
+
+      <div
+        *ngIf="password_confirmation.errors"
+        class="mt-2 mb-2 w-full text-start"
+      >
+        <span
+          class="text-danger text-left"
+          *ngIf="
+            password_confirmation.errors &&
+            (password_confirmation.touched || password_confirmation.dirty)
+          "
+        >
+          <span *ngIf="password_confirmation.errors.required" class="fs-xs"
+            >Password is required</span
+          >
+          <span *ngIf="password_confirmation.errors.minlength" class="fs-xs"
+            >Password must be greater tha 8 characters</span
+          >
+          <span *ngIf="password_confirmation.errors.maxlength" class="fs-xs"
+            >Password can be max 16 characters long</span
+          >
+        </span>
+      </div>
+
+      <button
+        type="submit"
+        [disabled]="!resetPasswordForm.valid"
+        class="btn btn-primary text-light mt-2 mb-2"
+      >
+        Cambiar contraseña
       </button>
     </form>
   </div>
+</div>
