--- a/frontend/src/app/user/components/register/register.component.html
+++ b/frontend/src/app/user/components/register/register.component.html
@@ -1,12 +1,16 @@
-<div style="margin-left: auto; margin-right: auto">
-  <p id="registerFeedback"></p>
-</div>
-<div>
-  <h1>Register</h1>
-  <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
-    <div>
-      <label for="name">Name: </label>
-      <input type="text" [formControl]="name" />
+<div class="m-auto text-center maxw-500">
+  <div class="m-4 p-3 rounded-3 full-shadow">
+    <h2 class="display-5 text-uppercase mt-4 mb-4">Registrarse</h2>
+    <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
+      <div class="mt-2 mb-2">
+        <input
+          type="text"
+          [formControl]="name"
+          class="form-control form-control-lg bg-dark-50"
+          aria-label="Name"
+          placeholder="Name"
+        />
+      </div>
       <div
         *ngIf="name.errors && isValidForm != null && !isValidForm"
         [ngClass]="'error'"
@@ -19,51 +23,123 @@
           Name can be max 25 characters long.
         </div>
       </div>
-    </div>
 
-    <div>
-      <label for="email">Email: </label>
-      <input type="email" [formControl]="email" />
-      <div
-        *ngIf="email.errors && isValidForm != null && !isValidForm"
-        [ngClass]="'error'"
-      >
-        <div *ngIf="email.errors.required">Email is required</div>
-        <div *ngIf="email.errors.pattern">Email not a valid format.</div>
+      <div class="mt-2 mb-2">
+        <input
+          type="email"
+          [formControl]="email"
+          class="form-control form-control-lg bg-dark-50"
+          aria-label="Email"
+          placeholder="Email"
+        />
       </div>
-    </div>
+      <div *ngIf="email.errors" class="mt-2 mb-2 text-start">
+        <span
+          class="text-danger"
+          *ngIf="email.errors && (email.touched || email.dirty)"
+        >
+          <span *ngIf="email.errors.required" class="fs-xs"
+            >Email is required</span
+          >
+          <div *ngIf="email.errors.pattern" class="fs-xs">
+            Email not a valid format.
+          </div>
+        </span>
+      </div>
 
-    <div>
-      <label for="password">Password: </label>
-      <input type="password" [formControl]="password" />
-      <div
-        *ngIf="password.errors && isValidForm != null && !isValidForm"
-        [ngClass]="'error'"
-      >
-        <div *ngIf="password.errors.required">Password is required</div>
-        <div *ngIf="password.errors.minlength">
-          Password must be at least 8 characters long.
-        </div>
+      <div class="mt-2 mb-2">
+        <input
+          type="password"
+          [formControl]="password"
+          class="form-control form-control-lg bg-dark-50"
+          aria-label="Password"
+          placeholder="Password"
+        />
       </div>
-    </div>
-    <div>
-      <label for="password_confirmation">Password confirmation: </label>
-      <input type="password" [formControl]="password_confirmation" />
-      <div
-        *ngIf="
-          password_confirmation.errors && isValidForm != null && !isValidForm
-        "
-        [ngClass]="'error'"
-      >
-        <div *ngIf="password_confirmation.errors.required">
-          password_confirmation is required
-        </div>
-        <div *ngIf="password_confirmation.errors.minlength">
-          password_confirmation must be at least 8 characters long.
-        </div>
-      </div>
-    </div>
 
-    <button type="submit">Register</button>
-  </form>
+      <div *ngIf="password.errors" class="mt-2 mb-2 w-full text-start">
+        <span
+          class="text-danger text-left"
+          *ngIf="password.errors && (password.touched || password.dirty)"
+        >
+          <span *ngIf="password.errors.required" class="fs-xs"
+            >Password is required</span
+          >
+          <span *ngIf="password.errors.minlength" class="fs-xs"
+            >Password must be greater tha 8 characters</span
+          >
+          <span *ngIf="password.errors.maxlength" class="fs-xs"
+            >Password can be max 16 characters long</span
+          >
+        </span>
+      </div>
+
+      <div class="mt-2 mb-2">
+        <input
+          type="password"
+          [formControl]="password"
+          class="form-control form-control-lg bg-dark-50"
+          aria-label="Password"
+          placeholder="Password"
+        />
+      </div>
+
+      <div *ngIf="password.errors" class="mt-2 mb-2 w-full text-start">
+        <span
+          class="text-danger text-left"
+          *ngIf="password.errors && (password.touched || password.dirty)"
+        >
+          <span *ngIf="password.errors.required" class="fs-xs"
+            >Password is required</span
+          >
+          <span *ngIf="password.errors.minlength" class="fs-xs"
+            >Password must be greater tha 8 characters</span
+          >
+          <span *ngIf="password.errors.maxlength" class="fs-xs"
+            >Password can be max 16 characters long</span
+          >
+        </span>
+      </div>
+
+      <div class="mt-2 mb-2">
+        <input
+          type="password"
+          [formControl]="password_confirmation"
+          class="form-control form-control-lg bg-dark-50"
+          aria-label="Password"
+          placeholder="Password confirmation"
+        />
+      </div>
+
+      <div *ngIf="password_confirmation.errors" class="mt-2 mb-2 w-full text-start">
+        <span
+          class="text-danger text-left"
+          *ngIf="password_confirmation.errors && (password_confirmation.touched || password_confirmation.dirty)"
+        >
+          <span *ngIf="password_confirmation.errors.required" class="fs-xs"
+            >Password is required</span
+          >
+          <span *ngIf="password_confirmation.errors.minlength" class="fs-xs"
+            >Password must be greater tha 8 characters</span
+          >
+          <span *ngIf="password_confirmation.errors.maxlength" class="fs-xs"
+            >Password can be max 16 characters long</span
+          >
+        </span>
+      </div>
+
+      <button
+        type="submit"
+        [disabled]="!registerForm.valid"
+        class="btn btn-primary text-light mt-2 mb-2"
+      >
+        Registrarse
+      </button>
+    </form>
+  </div>
 </div>
+
+<div class="text-center">
+  <p>¿Ya tienes cuenta en Mesta? <a [routerLink]="['/login']">Inicia sesión</a></p>
+</div>
+
