--- a/frontend/src/app/auth/components/forgot-password/forgot-password.component.html
+++ b/frontend/src/app/auth/components/forgot-password/forgot-password.component.html
@@ -2,7 +2,7 @@
   <div class="m-4 p-3 rounded-3 full-shadow">
     <h2 class="display-5 text-uppercase mt-4 mb-4">Forgot password</h2>
     <form [formGroup]="forgotPasswordForm" (ngSubmit)="onSubmit()">
-      <div class="mt-2 mb-2">
+      <div class="mt-3 custom-input-labeled">
         <input
           type="email"
           [formControl]="email"
@@ -10,6 +10,7 @@
           aria-label="Email"
           placeholder="Email"
         />
+        <label for="email" class="text-primary">Email</label>
       </div>
 
       <div *ngIf="email.errors" class="mt-2 mb-2 text-start">
