--- a/frontend/src/app/auth/components/reset-password/reset-password.component.html
+++ b/frontend/src/app/auth/components/reset-password/reset-password.component.html
@@ -1,8 +1,8 @@
 <div class="m-auto text-center maxw-500">
   <div class="m-4 p-3 rounded-3 full-shadow">
-    <h2 class="display-5 text-uppercase mt-4 mb-4">Login</h2>
+    <h2 class="display-5 text-uppercase mt-4 mb-4">Cambiar contraseña</h2>
     <form [formGroup]="resetPasswordForm" (ngSubmit)="onSubmit()">
-      <div class="mt-2 mb-2">
+      <div class="mt-3 custom-input-labeled">
         <input
           type="password"
           [formControl]="password"
@@ -10,9 +10,10 @@
           aria-label="Password"
           placeholder="Password"
         />
+        <label for="password" class="text-primary">Contraseña</label>
       </div>
 
-      <div *ngIf="password.errors" class="mt-2 mb-2 w-full text-start">
+      <div *ngIf="password.errors" class="mt-2 mb-2 text-start">
         <span
           class="text-danger text-left"
           *ngIf="password.errors && (password.touched || password.dirty)"
@@ -28,7 +29,7 @@
           >
         </span>
       </div>
-      <div class="mt-2 mb-2">
+      <div class="mt-3 custom-input-labeled">
         <input
           type="password"
           [formControl]="password_confirmation"
@@ -36,12 +37,12 @@
           aria-label="Password"
           placeholder="Password confirmation"
         />
+        <label for="password_confirmation" class="text-primary"
+          >Repetir contraseña</label
+        >
       </div>
 
-      <div
-        *ngIf="password_confirmation.errors"
-        class="mt-2 mb-2 w-full text-start"
-      >
+      <div *ngIf="password_confirmation.errors" class="mt-2 mb-2 text-start">
         <span
           class="text-danger text-left"
           *ngIf="
