--- a/frontend/src/app/shared/components/header/header.component.scss
+++ b/frontend/src/app/shared/components/header/header.component.scss
@@ -1,11 +1,12 @@
-@import "../../../../styles.scss";
-
 .dropdown-toggle::after {
   display: none;
 }
+.dropdown-menu {
+  display: none;
+}
 .logo-img {
-  height: calc(1.475rem + 2.175vw);
-  padding-bottom: 4px;
+  height: calc(1rem + 2.175vw);
+  padding-bottom: 2px;
 }
 .header-buttons {
   display: none;
@@ -13,15 +14,38 @@
 .header-dropdown {
   display: block;
 }
-
-@media screen and (min-width: $breakPointTablet) {
+.app-menu a:first-child::after {
+  content: "|";
+  // font-size: 0.8rem !important;
+  font-weight: normal !important;
+  padding-right: 0.75rem;
+  padding-left: 0.75rem;
+}
+.app-menu a:first-child::after {
+  @apply text-secondary-500;
+}
+.app-menu a {
+  // font-size: 0.8rem;
+  letter-spacing: 0.1rem;
+  padding-top: 4px;
+}
+.app-menu a {
+  @apply text-secondary-500 text-xs;
+}
+.app-menu a.router-link-active {
+  @apply text-primary-500 text-base font-bold pt-0;
+}
+@screen md {
   .header-buttons {
-    display: block;
+    @apply block;
   }
   .header-dropdown {
-    display: none;
+    @apply hidden;
   }
-  .menu-buttons {
-    flex-direction: row-reverse;
+  .app-menu a {
+    @apply text-xs;
+  }
+  .app-menu a.router-link-active {
+    @apply text-sm
   }
 }
