--- a/frontend/src/app/user/components/register/register.component.html
+++ b/frontend/src/app/user/components/register/register.component.html
@@ -2,29 +2,32 @@
   <div class="m-4 p-3 rounded-3 full-shadow">
     <h2 class="display-5 text-uppercase mt-4 mb-4">Registrarse</h2>
     <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
-      <div class="mt-2 mb-2">
+      <div class="mt-3 custom-input-labeled">
         <input
           type="text"
           [formControl]="name"
           class="form-control form-control-lg bg-dark-50"
           aria-label="Name"
-          placeholder="Name"
+          placeholder="Nombre"
         />
+        <label for="name" class="text-primary">Nombre</label>
       </div>
       <div
         *ngIf="name.errors && isValidForm != null && !isValidForm"
-        [ngClass]="'error'"
+        class="mt-2 mb-2 text-start"
       >
-        <div *ngIf="name.errors.required">Name is required</div>
-        <div *ngIf="name.errors.minlength">
+        <div *ngIf="name.errors.required" class="text-danger">
+          Name is required
+        </div>
+        <div *ngIf="name.errors.minlength" class="fs-xs">
           Name must be at least 5 characters long.
         </div>
-        <div *ngIf="name.errors.maxlength">
+        <div *ngIf="name.errors.maxlength" class="fs-xs">
           Name can be max 25 characters long.
         </div>
       </div>
 
-      <div class="mt-2 mb-2">
+      <div class="mt-3 custom-input-labeled">
         <input
           type="email"
           [formControl]="email"
@@ -32,6 +35,7 @@
           aria-label="Email"
           placeholder="Email"
         />
+        <label for="email" class="text-primary">Email</label>
       </div>
       <div *ngIf="email.errors" class="mt-2 mb-2 text-start">
         <span
@@ -47,17 +51,18 @@
         </span>
       </div>
 
-      <div class="mt-2 mb-2">
+      <div class="mt-3 custom-input-labeled">
         <input
           type="password"
           [formControl]="password"
           class="form-control form-control-lg bg-dark-50"
           aria-label="Password"
-          placeholder="Password"
+          placeholder="Contraseña"
         />
+        <label for="password" class="text-primary">Contraseña</label>
       </div>
 
-      <div *ngIf="password.errors" class="mt-2 mb-2 w-full text-start">
+      <div *ngIf="password.errors" class="mb-3 text-start">
         <span
           class="text-danger text-left"
           *ngIf="password.errors && (password.touched || password.dirty)"
@@ -74,47 +79,26 @@
         </span>
       </div>
 
-      <div class="mt-2 mb-2">
-        <input
-          type="password"
-          [formControl]="password"
-          class="form-control form-control-lg bg-dark-50"
-          aria-label="Password"
-          placeholder="Password"
-        />
-      </div>
-
-      <div *ngIf="password.errors" class="mt-2 mb-2 w-full text-start">
-        <span
-          class="text-danger text-left"
-          *ngIf="password.errors && (password.touched || password.dirty)"
-        >
-          <span *ngIf="password.errors.required" class="fs-xs"
-            >Password is required</span
-          >
-          <span *ngIf="password.errors.minlength" class="fs-xs"
-            >Password must be greater tha 8 characters</span
-          >
-          <span *ngIf="password.errors.maxlength" class="fs-xs"
-            >Password can be max 16 characters long</span
-          >
-        </span>
-      </div>
-
-      <div class="mt-2 mb-2">
+      <div class="mt-3 custom-input-labeled">
         <input
           type="password"
           [formControl]="password_confirmation"
           class="form-control form-control-lg bg-dark-50"
           aria-label="Password"
-          placeholder="Password confirmation"
+          placeholder="Repita contraseña"
         />
+        <label for="password_confirmation" class="text-primary"
+          >Repita contraseña</label
+        >
       </div>
 
-      <div *ngIf="password_confirmation.errors" class="mt-2 mb-2 w-full text-start">
+      <div *ngIf="password_confirmation.errors" class="mb-3 text-start">
         <span
           class="text-danger text-left"
-          *ngIf="password_confirmation.errors && (password_confirmation.touched || password_confirmation.dirty)"
+          *ngIf="
+            password_confirmation.errors &&
+            (password_confirmation.touched || password_confirmation.dirty)
+          "
         >
           <span *ngIf="password_confirmation.errors.required" class="fs-xs"
             >Password is required</span
@@ -131,7 +115,7 @@
       <button
         type="submit"
         [disabled]="!registerForm.valid"
-        class="btn btn-primary text-light mt-2 mb-2"
+        class="btn btn-primary text-light mt-3 mb-3"
       >
         Registrarse
       </button>
@@ -140,6 +124,7 @@
 </div>
 
 <div class="text-center">
-  <p>¿Ya tienes cuenta en Mesta? <a [routerLink]="['/login']">Inicia sesión</a></p>
+  <p>
+    ¿Ya tienes cuenta en Mesta? <a [routerLink]="['/login']">Inicia sesión</a>
+  </p>
 </div>
-
