tailwind user configuration

--- a/frontend/src/app/auth/components/reset-password/reset-password.component.html
+++ b/frontend/src/app/auth/components/reset-password/reset-password.component.html
@@ -1,71 +1,61 @@
 <div class="m-auto text-center maxw-500">
-  <div class="m-4 p-3 rounded-3 full-shadow">
-    <h2 class="display-5 text-uppercase mt-4 mb-4">Cambiar contraseña</h2>
-    <form [formGroup]="resetPasswordForm" (ngSubmit)="onSubmit()">
-      <div class="mt-3 custom-input-labeled">
+  <div class="m-4 px-6 py-10 rounded-lg full-shadow bg-white-600">
+    <h2 class="text-2xl uppercase my-5">Cambiar contraseña</h2>
+    <form [formGroup]="resetPasswordForm" (ngSubmit)="onSubmit()" class="mt-10">
+      <div class="my-5 custom-input-labeled">
         <input
           type="password"
           [formControl]="password"
-          class="form-control form-control-lg bg-dark-50"
           aria-label="Password"
           placeholder="Password"
         />
-        <label for="password" class="text-primary">Contraseña</label>
+        <label for="password" class="text-primary-500">Contraseña</label>
+        <div *ngIf="password.errors" class="mt-2 mb-2 form-errors">
+          <span *ngIf="password.errors && (password.touched || password.dirty)">
+            <span *ngIf="password.errors.required">Password is required</span>
+            <span *ngIf="password.errors.minlength"
+              >Password must be greater tha 8 characters</span
+            >
+            <span *ngIf="password.errors.maxlength"
+              >Password can be max 16 characters long</span
+            >
+          </span>
+        </div>
       </div>
 
-      <div *ngIf="password.errors" class="mt-2 mb-2 text-start">
-        <span
-          class="text-danger text-left"
-          *ngIf="password.errors && (password.touched || password.dirty)"
-        >
-          <span *ngIf="password.errors.required" class="fs-xs"
-            >Password is required</span
-          >
-          <span *ngIf="password.errors.minlength" class="fs-xs"
-            >Password must be greater tha 8 characters</span
-          >
-          <span *ngIf="password.errors.maxlength" class="fs-xs"
-            >Password can be max 16 characters long</span
-          >
-        </span>
-      </div>
-      <div class="mt-3 custom-input-labeled">
+      <div class="my-5 custom-input-labeled">
         <input
           type="password"
           [formControl]="password_confirmation"
-          class="form-control form-control-lg bg-dark-50"
           aria-label="Password"
           placeholder="Password confirmation"
         />
-        <label for="password_confirmation" class="text-primary"
-          >Repetir contraseña</label
-        >
-      </div>
+        <label for="password_confirmation">Repetir contraseña</label>
 
-      <div *ngIf="password_confirmation.errors" class="mt-2 mb-2 text-start">
-        <span
-          class="text-danger text-left"
-          *ngIf="
-            password_confirmation.errors &&
-            (password_confirmation.touched || password_confirmation.dirty)
-          "
-        >
-          <span *ngIf="password_confirmation.errors.required" class="fs-xs"
-            >Password is required</span
+        <div *ngIf="password_confirmation.errors" class="mt-2 mb-2 form-errors">
+          <span
+            *ngIf="
+              password_confirmation.errors &&
+              (password_confirmation.touched || password_confirmation.dirty)
+            "
           >
-          <span *ngIf="password_confirmation.errors.minlength" class="fs-xs"
-            >Password must be greater tha 8 characters</span
-          >
-          <span *ngIf="password_confirmation.errors.maxlength" class="fs-xs"
-            >Password can be max 16 characters long</span
-          >
-        </span>
+            <span *ngIf="password_confirmation.errors.required"
+              >Password is required</span
+            >
+            <span *ngIf="password_confirmation.errors.minlength"
+              >Password must be greater tha 8 characters</span
+            >
+            <span *ngIf="password_confirmation.errors.maxlength"
+              >Password can be max 16 characters long</span
+            >
+          </span>
+        </div>
       </div>
 
       <button
         type="submit"
         [disabled]="!resetPasswordForm.valid"
-        class="btn btn-primary text-light mt-2 mb-2"
+        class="btn btn-primary"
       >
         Cambiar contraseña
       </button>
