--- a/frontend/src/app/auth/components/forgot-password/forgot-password.component.html
+++ b/frontend/src/app/auth/components/forgot-password/forgot-password.component.html
@@ -1,36 +1,28 @@
 <div class="m-auto text-center maxw-500">
-  <div class="m-4 p-3 rounded-3 full-shadow">
-    <h2 class="display-5 text-uppercase mt-4 mb-4">Forgot password</h2>
-    <form [formGroup]="forgotPasswordForm" (ngSubmit)="onSubmit()">
-      <div class="mt-3 custom-input-labeled">
+  <div class="m-4 px-6 py-10 rounded-lg full-shadow bg-white-600">
+    <h2 class="text-2xl uppercase my-5">Forgot password</h2>
+    <form [formGroup]="forgotPasswordForm" (ngSubmit)="onSubmit()" class="mt-10">
+      <div class="my-5 custom-input-labeled">
         <input
           type="email"
           [formControl]="email"
-          class="form-control form-control-lg bg-dark-50"
           aria-label="Email"
           placeholder="Email"
         />
-        <label for="email" class="text-primary">Email</label>
-      </div>
+        <label for="email">Email</label>
 
-      <div *ngIf="email.errors" class="mt-2 mb-2 text-start">
-        <span
-          class="text-danger"
-          *ngIf="email.errors && (email.touched || email.dirty)"
-        >
-          <span *ngIf="email.errors.required" class="fs-xs"
-            >Email is required</span
-          >
-          <div *ngIf="email.errors.pattern" class="fs-xs">
-            Email not a valid format.
-          </div>
-        </span>
+        <div *ngIf="email.errors" class="mt-2 mb-2form-errors">
+          <span *ngIf="email.errors && (email.touched || email.dirty)">
+            <span *ngIf="email.errors.required">Email is required</span>
+            <div *ngIf="email.errors.pattern">Email not a valid format.</div>
+          </span>
+        </div>
       </div>
 
       <button
         type="submit"
         [disabled]="!forgotPasswordForm.valid"
-        class="btn btn-primary text-light mt-2 mb-2"
+        class="btn btn-primary"
       >
         Enviar email
       </button>
@@ -41,6 +33,6 @@
 <div class="text-center">
   <p>
     ¿Te acordaste de tu contraseña?
-    <a [routerLink]="['/login']">Inicia sesión</a>
+    <a [routerLink]="['/login']" class="text-primary-500 hover:text-primary-700">Inicia sesión</a>
   </p>
 </div>
