--- a/frontend/src/app/auth/components/login/login.component.html
+++ b/frontend/src/app/auth/components/login/login.component.html
@@ -1,62 +1,60 @@
 <div class="m-auto text-center maxw-500">
-  <div class="m-4 px-6 py-10 rounded-lg full-shadow">
-    <h2 class="text-2xl uppercase mt-4 mb-4">Login</h2>
-    <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
-      <div class="mt-3 custom-input-labeled">
+  <div class="m-4 px-6 py-10 rounded-lg full-shadow bg-white-600">
+    <h2 class="text-2xl uppercase my-5">Login</h2>
+    <form [formGroup]="loginForm" (ngSubmit)="onSubmit()" class="mt-10">
+      <div class="my-5 custom-input-labeled">
         <input
           type="email"
           [formControl]="email"
-          class="rounded-md bg-secondary-50 py-2 px-4 text-xl w-full"
           aria-label="Email"
           placeholder="Email"
         />
         <label for="name" class="text-primary-500">Nombre</label>
-      </div>
-
-      <div *ngIf="email.errors" class="mt-2 mb-2 text-start">
-        <span
-          class="text-danger"
-          *ngIf="email.errors && (email.touched || email.dirty)"
-        >
-          <span *ngIf="email.errors.required" class="fs-xs"
-            >Email is required</span
+        <div *ngIf="email.errors" class="mt-2 mb-2 form-errors">
+          <span
+            *ngIf="email.errors && (email.touched || email.dirty)"
           >
-          <div *ngIf="email.errors.pattern" class="fs-xs">
-            Email not a valid format.
-          </div>
-        </span>
+            <span *ngIf="email.errors.required"
+              >Email is required</span
+            >
+            <div *ngIf="email.errors.pattern">
+              Email not a valid format.
+            </div>
+          </span>
+        </div>
       </div>
 
-      <div class="mt-3 custom-input-labeled">
+      <div class="my-5 custom-input-labeled">
         <input
           type="password"
           [formControl]="password"
-          class="rounded-md bg-secondary-50 py-2 px-4 text-lg w-full leading-tight focus:outline-none focus:shadow-outline"
+          class=""
           aria-label="Password"
           placeholder="Password"
         />
-        <label for="password" class="text-primary">Contraseña</label>
-
+        <label for="password" class="">Contraseña</label>
+        <div *ngIf="password.errors" class="mt-2 mb-2 form-errors">
+          <span
+            class=""
+            *ngIf="password.errors && (password.touched || password.dirty)"
+          >
+            <span *ngIf="password.errors.required"
+              >Password is required</span
+            >
+            <span *ngIf="password.errors.minlength"
+              >Password must be greater tha 8 characters</span
+            >
+            <span *ngIf="password.errors.maxlength"
+              >Password can be max 16 characters long</span
+            >
+          </span>
+        </div>
       </div>
 
-      <div *ngIf="password.errors" class="mt-2 mb-2 text-start">
-        <span
-          class="text-danger text-left"
-          *ngIf="password.errors && (password.touched || password.dirty)"
-        >
-          <span *ngIf="password.errors.required" class="fs-xs"
-            >Password is required</span
-          >
-          <span *ngIf="password.errors.minlength" class="fs-xs"
-            >Password must be greater tha 8 characters</span
-          >
-          <span *ngIf="password.errors.maxlength" class="fs-xs"
-            >Password can be max 16 characters long</span
-          >
-        </span>
-      </div>
-      <div class="text-right pt-2 pb-2">
-        <a [routerLink]="['/forgot-password']" class="text-secondary-400 hover:text-secondary-700"
+      <div class="text-right py-4">
+        <a
+          [routerLink]="['/forgot-password']"
+          class="text-secondary-400 hover:text-primary-500"
           >¿Olvidaste tu contraseña?</a
         >
       </div>
@@ -72,5 +70,8 @@
 </div>
 
 <div class="text-center">
-  <p>¿Nuevo en Mesta? <a [routerLink]="['/register']" class="text-primary-500">Regístrate</a></p>
+  <p>
+    ¿Nuevo en Mesta?
+    <a [routerLink]="['/register']" class="text-primary-500 hover:text-primary-700">Regístrate</a>
+  </p>
 </div>
