--- a/frontend/src/app/user/components/register/register.component.html
+++ b/frontend/src/app/user/components/register/register.component.html
@@ -1,121 +1,101 @@
 <div class="m-auto text-center maxw-500">
-  <div class="m-4 p-3 rounded-3 full-shadow">
-    <h2 class="display-5 text-uppercase mt-4 mb-4">Registrarse</h2>
-    <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
-      <div class="mt-3 custom-input-labeled">
+  <div class="m-4 px-6 py-10 rounded-lg full-shadow bg-white-600">
+    <h2 class="text-2xl uppercase my-">Registrarse</h2>
+    <form [formGroup]="registerForm" (ngSubmit)="onSubmit()" class="mt-10">
+      <div class="my-5 custom-input-labeled">
         <input
           type="text"
           [formControl]="name"
-          class="form-control form-control-lg bg-dark-50"
           aria-label="Name"
           placeholder="Nombre"
         />
-        <label for="name" class="text-primary">Nombre</label>
-      </div>
-      <div
-        *ngIf="name.errors && isValidForm != null && !isValidForm"
-        class="mt-2 mb-2 text-start"
-      >
-        <div *ngIf="name.errors.required" class="text-danger">
-          Name is required
-        </div>
-        <div *ngIf="name.errors.minlength" class="fs-xs">
-          Name must be at least 5 characters long.
-        </div>
-        <div *ngIf="name.errors.maxlength" class="fs-xs">
-          Name can be max 25 characters long.
+        <label for="name">Nombre</label>
+        <div
+          *ngIf="name.errors && isValidForm != null && !isValidForm"
+          class="mt-2 mb-2 form-errors"
+        >
+          <div *ngIf="name.errors.required">Name is required</div>
+          <div *ngIf="name.errors.minlength">
+            Name must be at least 5 characters long.
+          </div>
+          <div *ngIf="name.errors.maxlength">
+            Name can be max 25 characters long.
+          </div>
         </div>
       </div>
 
-      <div class="mt-3 custom-input-labeled">
+      <div class="my-5 custom-input-labeled">
         <input
           type="email"
           [formControl]="email"
-          class="form-control form-control-lg bg-dark-50"
           aria-label="Email"
           placeholder="Email"
         />
-        <label for="email" class="text-primary">Email</label>
-      </div>
-      <div *ngIf="email.errors" class="mt-2 mb-2 text-start">
-        <span
-          class="text-danger"
-          *ngIf="email.errors && (email.touched || email.dirty)"
-        >
-          <span *ngIf="email.errors.required" class="fs-xs"
-            >Email is required</span
-          >
-          <div *ngIf="email.errors.pattern" class="fs-xs">
-            Email not a valid format.
-          </div>
-        </span>
+        <label for="email">Email</label>
+        <div *ngIf="email.errors" class="mt-2 mb-2 form-errors">
+          <span *ngIf="email.errors && (email.touched || email.dirty)">
+            <span *ngIf="email.errors.required">Email is required</span>
+            <div *ngIf="email.errors.pattern">Email not a valid format.</div>
+          </span>
+        </div>
       </div>
 
-      <div class="mt-3 custom-input-labeled">
+      <div class="my-5 custom-input-labeled">
         <input
           type="password"
           [formControl]="password"
-          class="form-control form-control-lg bg-dark-50"
           aria-label="Password"
           placeholder="Contraseña"
         />
-        <label for="password" class="text-primary">Contraseña</label>
+        <label for="password">Contraseña</label>
+        <div *ngIf="password.errors" class="mt-2 mb-2 form-errors">
+          <span *ngIf="password.errors && (password.touched || password.dirty)">
+            <span *ngIf="password.errors.required">Password is required</span>
+            <span *ngIf="password.errors.minlength"
+              >Password must be greater tha 8 characters</span
+            >
+            <span *ngIf="password.errors.maxlength"
+              >Password can be max 16 characters long</span
+            >
+          </span>
+        </div>
       </div>
 
-      <div *ngIf="password.errors" class="mb-3 text-start">
-        <span
-          class="text-danger text-left"
-          *ngIf="password.errors && (password.touched || password.dirty)"
-        >
-          <span *ngIf="password.errors.required" class="fs-xs"
-            >Password is required</span
-          >
-          <span *ngIf="password.errors.minlength" class="fs-xs"
-            >Password must be greater tha 8 characters</span
-          >
-          <span *ngIf="password.errors.maxlength" class="fs-xs"
-            >Password can be max 16 characters long</span
-          >
-        </span>
-      </div>
-
-      <div class="mt-3 custom-input-labeled">
+      <div class="my-5 custom-input-labeled">
         <input
           type="password"
           [formControl]="password_confirmation"
-          class="form-control form-control-lg bg-dark-50"
           aria-label="Password"
           placeholder="Repita contraseña"
         />
-        <label for="password_confirmation" class="text-primary"
+        <label for="password_confirmation"
           >Repita contraseña</label
         >
-      </div>
 
-      <div *ngIf="password_confirmation.errors" class="mb-3 text-start">
-        <span
-          class="text-danger text-left"
-          *ngIf="
-            password_confirmation.errors &&
-            (password_confirmation.touched || password_confirmation.dirty)
-          "
-        >
-          <span *ngIf="password_confirmation.errors.required" class="fs-xs"
-            >Password is required</span
+        <div *ngIf="password_confirmation.errors" class="mt-2 mb-2 form-errors">
+          <span
+            *ngIf="
+              password_confirmation.errors &&
+              (password_confirmation.touched || password_confirmation.dirty)
+            "
           >
-          <span *ngIf="password_confirmation.errors.minlength" class="fs-xs"
-            >Password must be greater tha 8 characters</span
-          >
-          <span *ngIf="password_confirmation.errors.maxlength" class="fs-xs"
-            >Password can be max 16 characters long</span
-          >
-        </span>
+            <span *ngIf="password_confirmation.errors.required"
+              >Password is required</span
+            >
+            <span *ngIf="password_confirmation.errors.minlength"
+              >Password must be greater tha 8 characters</span
+            >
+            <span *ngIf="password_confirmation.errors.maxlength"
+              >Password can be max 16 characters long</span
+            >
+          </span>
+        </div>
       </div>
 
       <button
         type="submit"
         [disabled]="!registerForm.valid"
-        class="btn btn-primary text-light mt-3 mb-3"
+        class="btn btn-primary"
       >
         Registrarse
       </button>
@@ -125,6 +105,6 @@
 
 <div class="text-center">
   <p>
-    ¿Ya tienes cuenta en Mesta? <a [routerLink]="['/login']">Inicia sesión</a>
+    ¿Ya tienes cuenta en Mesta? <a [routerLink]="['/login']" class="text-primary-500 hover:text-primary-700">Inicia sesión</a>
   </p>
 </div>
