--- a/frontend/src/app/user/components/user-configuration/user-configuration.component.html
+++ b/frontend/src/app/user/components/user-configuration/user-configuration.component.html
@@ -1,51 +1,54 @@
 <div class="p-2 flex flex-row limit-container">
-    <div id="nav-configuration">
-      <div class="pt-5 flex flex-column gap-4 text-end position-sticky">
-        <a
-          class="cursor-pointer"
-          (click)="scroller.scrollToAnchor('personal-information')"
-          >Información personal</a
-        >
-        <a class="cursor-pointer" (click)="scroller.scrollToAnchor('profiles')"
-          >Perfiles</a
-        >
-        <a
-          class="cursor-pointer"
-          (click)="scroller.scrollToAnchor('configuration')"
-          >Configuración</a
-        >
-        <a class="cursor-pointer" (click)="scroller.scrollToAnchor('contact')"
-          >Contacto</a
-        >
-      </div>
+  <div id="nav-configuration">
+    <div class="pt-5 flex flex-col gap-4 text-right sticky">
+      <a
+        class="cursor-pointer text-primary-500 hover:text-primary-900"
+        (click)="scroller.scrollToAnchor('personal-information')"
+        >Información personal</a
+      >
+      <a
+        class="cursor-pointer text-primary-500 hover:text-primary-900"
+        (click)="scroller.scrollToAnchor('profiles')"
+        >Perfiles</a
+      >
+      <a
+        class="cursor-pointer text-primary-500 hover:text-primary-900"
+        (click)="scroller.scrollToAnchor('configuration')"
+        >Configuración</a
+      >
+      <a
+        class="cursor-pointer text-primary-500 hover:text-primary-900"
+        (click)="scroller.scrollToAnchor('contact')"
+        >Contacto</a
+      >
     </div>
-    <div class="w-full">
-      <div class="pt-5 vertical-border m-auto">
-        <section id="personal-information">
-          <h2>Información personal</h2>
-          <form [formGroup]="userForm" (ngSubmit)="onSubmit()">
-            <div class="mt-2 mb-2">
-              <label for="name">Nombre</label>
-              <div class="flex gap-1">
-                <input
-                  type="text"
-                  [formControl]="name"
-                  class="form-control bg-dark-50"
-                  aria-label="name"
-                  placeholder="Nombre"
-                />
-                <button
-                  type="submit"
-                  class="btn btn-secondary"
-                  [disabled]="!name.touched && !name.errors"
-                >
-                  <fa-icon [icon]="faSave"></fa-icon>
-                </button>
-              </div>
+  </div>
+  <div>
+    <div class="pt-5 vertical-border m-auto">
+      <section id="personal-information">
+        <h2>Información personal</h2>
+        <form [formGroup]="userForm" (ngSubmit)="onSubmit()">
+          <div class="mt-2 mb-2">
+            <label for="name">Nombre</label>
+            <div class="flex gap-1">
+              <input
+                type="text"
+                [formControl]="name"
+                class="bg-secondary-50 rounded-lg py-2 px-4 w-full focus:outline-none"
+                aria-label="name"
+                placeholder="Nombre"
+              />
+              <button
+                type="submit"
+                class="btn btn-secondary"
+                [disabled]="!name.touched && !name.errors"
+              >
+                <fa-icon [icon]="faSave"></fa-icon>
+              </button>
             </div>
             <div
-              *ngIf="name.errors && isValidForm != null && !isValidForm"
-              [ngClass]="'error'"
+              *ngIf="name.errors && (name.touched || name.dirty)"
+              class="mt-2 mb-2 text-danger text-left fs-xs"
             >
               <div *ngIf="name.errors.required">Name is required</div>
               <div *ngIf="name.errors.minlength">
@@ -55,27 +58,30 @@
                 Name can be max 25 characters long.
               </div>
             </div>
-  
-            <div class="mt-2 mb-2">
-              <label for="email">Email</label>
-              <div class="flex gap-1">
-                <input
-                  type="email"
-                  [formControl]="email"
-                  class="form-control bg-dark-50"
-                  aria-label="Email"
-                  placeholder="Email"
-                />
-                <button
-                  type="submit"
-                  class="btn btn-secondary"
-                  [disabled]="!name.touched && !name.errors"
-                >
-                  <fa-icon [icon]="faSave"></fa-icon>
-                </button>
-              </div>
+          </div>
+
+          <div class="mt-2 mb-2">
+            <label for="email">Email</label>
+            <div class="flex gap-1">
+              <input
+                type="email"
+                [formControl]="email"
+                class="bg-secondary-50 rounded-lg py-2 px-4 w-full focus:outline-none"
+                aria-label="Email"
+                placeholder="Email"
+              />
+              <button
+                type="submit"
+                class="btn btn-secondary"
+                [disabled]="!name.touched && !name.errors"
+              >
+                <fa-icon [icon]="faSave"></fa-icon>
+              </button>
             </div>
-            <div *ngIf="email.errors" class="mt-2 mb-2 text-start">
+            <div
+              *ngIf="email.errors"
+              class="mt-2 mb-2 text-danger text-left fs-xs"
+            >
               <span
                 class="text-danger"
                 *ngIf="email.errors && (email.touched || email.dirty)"
@@ -88,148 +94,167 @@
                 </div>
               </span>
             </div>
-          </form>
-          <hr color="color-dark-50" />
-        </section>
-        <section id="profiles">
-          <h2>Perfiles</h2>
-          <div class="profile-container p-3 rounded-3 mb-3">
-            <div class="profile-header justify-content-between">
-              <div class="flex flex-row gap-2">
-                <div
-                  class="color-profile rounded-1"
-                  style="background-color: red"
-                ></div>
-                <h4>Perfil 1</h4>
-              </div>
-              <fa-icon [icon]="faTrash"></fa-icon>
-            </div>
-            <div class="body-profile mb-2">
-              PLorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vitae
-              tortor purus. Vestibulum ante ipsum primis in faucibus orci luctus
-              et ultrices posuere cubilia curae; Maecenas sit amet imperdiet
-              lacus. Vivamus pretium risus et mauris molestie, ac eleifend lacus
-              suscipit. Integer commodo venenatis enim eu auctor. er
-            </div>
-            <div class="profile-phases flex flex-row gap-1 mb-2">
-              <h4 class="badge bg-primary rounded-pill">Fase 1</h4>
-              <h4 class="badge bg-blue rounded-pill">Fase 2</h4>
-              <h4 class="badge bg-purple rounded-pill">Fase 3</h4>
-              <h4 class="badge bg-orange rounded-pill">Fase 4</h4>
-            </div>
           </div>
-          <div class="add-profile rounded-3 text-center py-4" (click)="createProfile()">
-            <fa-icon [icon]="faPlus" size="4x"></fa-icon>
+        </form>
+        <hr class="text-secondary-50 my-8" />
+      </section>
+      <section id="profiles">
+        <h2>Perfiles</h2>
+        <div
+          class="mt-2 border-dashed border-secondary-400 border-2 cursor-pointer p-3 rounded-lg mb-3 hover:border-secondary-200"
+        >
+          <div class="flex flex-row justify-between">
+            <div class="flex flex-row gap-2">
+              <div
+                class="w-[10px] h-[25px] rounded"
+                style="background-color: red"
+              ></div>
+              <h4>Perfil 1</h4>
+            </div>
+            <fa-icon [icon]="faTrash"></fa-icon>
           </div>
-          <hr color="color-dark-50" />
-        </section>
-        <section id="configuration">
-          <h2>Configuración</h2>
-          <div class="flex flex-column">
-            <a
-              class="color-secondary"
-              [routerLink]="['/reset-password']"
-              routerLinkActive="router-link-active"
-              >Cambiar contraseña</a
+          <div class="body-profile my-2 text-sm">
+            PLorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vitae
+            tortor purus. Vestibulum ante ipsum primis in faucibus orci luctus
+            et ultrices posuere cubilia curae; Maecenas sit amet imperdiet
+            lacus. Vivamus pretium risus et mauris molestie, ac eleifend lacus
+            suscipit. Integer commodo venenatis enim eu auctor. er
+          </div>
+          <div class="profile-phases flex flex-row gap-1 mb-2">
+            <h4
+              class="bg-primary-500 text-white-500 rounded-full px-2 py-1 text-sm"
             >
-            <a class="color-danger">Eliminar cuenta</a>
+              Fase 1
+            </h4>
+            <h4
+              class="bg-blue-500 text-white-500 rounded-full px-2 py-1 text-sm"
+            >
+              Fase 2
+            </h4>
+            <h4
+              class="bg-purple-500 text-white-500 rounded-full px-2 py-1 text-sm"
+            >
+              Fase 3
+            </h4>
+            <h4
+              class="bg-orange-500 text-white-500 rounded-full px-2 py-1 text-sm"
+            >
+              Fase 4
+            </h4>
           </div>
-          <hr color="color-dark-50" />
-        </section>
-        <section id="contact">
-          <h2>Contacto</h2>
-          <form
-            [formGroup]="contactForm"
-            (ngSubmit)="onContact()"
-            class="text-center"
+        </div>
+        <div
+          class="add-profile rounded-lg text-center py-4 w-full cursor-pointer text-secondary-100 bg-secondary-50 border-secondary-100 hover:text-secondary-50 hover:bg-secondary-100 hover:border-secondary-50"
+          (click)="createProfile()"
+        >
+          <fa-icon [icon]="faPlus" size="4x"></fa-icon>
+        </div>
+        <hr class="text-secondary-50 my-8" />
+      </section>
+      <section id="configuration">
+        <h2>Configuración</h2>
+        <div class="flex flex-col mt-2">
+          <a
+            class="text-secondary-500 hover:text-primary-500"
+            [routerLink]="['/reset-password']"
+            routerLinkActive="router-link-active"
+            >Cambiar contraseña</a
           >
-            <div class="mt-2 mb-2">
-              <input
-                type="text"
-                [formControl]="nameContact"
-                class="form-control bg-dark-50"
-                aria-label="Name"
-                placeholder="Name"
-              />
+          <a class="text-danger cursor-pointer">Eliminar cuenta</a>
+        </div>
+        <hr class="text-secondary-50 my-8" />
+      </section>
+      <section id="contact">
+        <h2>Contacto</h2>
+        <form
+          [formGroup]="contactForm"
+          (ngSubmit)="onContact()"
+          class="text-center"
+        >
+          <div class="mt-2 mb-2">
+            <input
+              type="text"
+              [formControl]="nameContact"
+              class="bg-secondary-50 rounded-lg py-2 px-4 w-full focus:outline-none"
+              aria-label="Name"
+              placeholder="Name"
+            />
+          </div>
+          <div
+            *ngIf="
+              nameContact.errors && (nameContact.touched || nameContact.dirty)
+            "
+            class="mt-2 mb-2 text-danger text-left fs-xs"
+          >
+            <div *ngIf="nameContact.errors.required">Name is required</div>
+            <div *ngIf="nameContact.errors.minlength">
+              Name must be at least 5 characters long.
             </div>
-            <div
+            <div *ngIf="nameContact.errors.maxlength">
+              Name can be max 25 characters long.
+            </div>
+          </div>
+
+          <div class="mt-2 mb-2">
+            <input
+              type="email"
+              [formControl]="emailContact"
+              class="bg-secondary-50 rounded-lg py-2 px-4 w-full focus:outline-none"
+              aria-label="Email"
+              placeholder="Email"
+            />
+          </div>
+          <div
+            *ngIf="emailContact.errors"
+            class="mt-2 mb-2 text-danger text-left fs-xs"
+          >
+            <span
               *ngIf="
-                nameContact.errors &&
-                isValidContactForm != null &&
-                !isValidContactForm
+                emailContact.errors &&
+                (emailContact.touched || emailContact.dirty)
               "
-              [ngClass]="'error'"
             >
-              <div *ngIf="nameContact.errors.required">Name is required</div>
-              <div *ngIf="nameContact.errors.minlength">
-                Name must be at least 5 characters long.
-              </div>
-              <div *ngIf="nameContact.errors.maxlength">
-                Name can be max 25 characters long.
-              </div>
-            </div>
-  
-            <div class="mt-2 mb-2">
-              <input
-                type="email"
-                [formControl]="emailContact"
-                class="form-control bg-dark-50"
-                aria-label="Email"
-                placeholder="Email"
-              />
-            </div>
-            <div *ngIf="emailContact.errors" class="mt-2 mb-2 text-start">
-              <span
-                class="text-danger"
-                *ngIf="
-                  emailContact.errors &&
-                  (emailContact.touched || emailContact.dirty)
-                "
+              <span *ngIf="emailContact.errors.required"
+                >Email is required</span
               >
-                <span *ngIf="emailContact.errors.required" class="fs-xs"
-                  >Email is required</span
-                >
-                <div *ngIf="emailContact.errors.pattern" class="fs-xs">
-                  Email not a valid format.
-                </div>
-              </span>
-            </div>
-  
-            <div class="mt-2 mb-2">
-              <textarea
-                name="bodyContact"
-                class="form-control bg-dark-50"
-                placeholder="Escribe aquí tus dudas"
-                rows="8"
-              ></textarea>
-            </div>
-            <div
-              *ngIf="
-                bodyContact.errors &&
-                isValidContactForm != null &&
-                !isValidContactForm
-              "
-              [ngClass]="'error'"
-            >
-              <div *ngIf="bodyContact.errors.required">Name is required</div>
-              <div *ngIf="bodyContact.errors.minlength">
-                Name must be at least 5 characters long.
+              <div *ngIf="emailContact.errors.pattern">
+                Email not a valid format.
               </div>
-              <div *ngIf="bodyContact.errors.maxlength">
-                Name can be max 25 characters long.
-              </div>
+            </span>
+          </div>
+
+          <div class="mt-2 mb-2">
+            <textarea
+              name="bodyContact"
+              class="bg-secondary-50 rounded-lg py-2 px-4 w-full focus:outline-none"
+              placeholder="Escribe aquí tus dudas"
+              rows="8"
+            ></textarea>
+          </div>
+          <div
+            *ngIf="
+              bodyContact.errors && (bodyContact.touched || bodyContact.dirty)
+            "
+            class="mt-2 mb-2 text-danger text-left fs-xs"
+          >
+            <div *ngIf="bodyContact.errors.required">Name is required</div>
+            <div *ngIf="bodyContact.errors.minlength">
+              Name must be at least 5 characters long.
             </div>
-  
-            <button
-              type="submit"
-              [disabled]="!contactForm.valid"
-              class="btn btn-primary text-light mt-2 mb-2"
-            >
-              Enviar
-            </button>
-          </form>
-        </section>
-      </div>
+            <div *ngIf="bodyContact.errors.maxlength">
+              Name can be max 25 characters long.
+            </div>
+          </div>
+
+          <button
+            type="submit"
+            [disabled]="!contactForm.valid"
+            class="btn btn-primary text-light mt-2 mb-2"
+          >
+            Enviar
+          </button>
+        </form>
+      </section>
     </div>
   </div>
-  
+</div>
